# PHX_structs

./: .gitignore  CLAUDE.md  assemblies.json  pyproject.toml  windows.json
docs/: phx-structs-strategy-and-routines.md
src/phx_structs/: blocks.py  cli.py  crossref.py  sibling_import.py
tests/: test_blocks.py  test_crossref.py
