[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phx-structs"
version = "0.1.0"
description = "Cross-references PHPP Components/Windows/Areas via a repeating-block reader for R-Values assemblies"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
phpp-struct-ref = "phx_structs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
